<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginVertical="8dp"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:paddingBottom="8dp"
        android:textColorHint="@color/secondaryDarkColor"
        app:boxStrokeColor="@color/secondaryDarkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balanceDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:paddingBottom="8dp"
        app:suffixText="@string/euro"
        android:textColorHint="@color/secondaryDarkColor"
        app:boxStrokeColor="@color/secondaryDarkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balanceAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:paddingVertical="8dp"
        android:textColorHint="@color/secondaryDarkColor"
        app:boxStrokeColor="@color/secondaryDarkColor">

        <AutoCompleteTextView
            android:id="@+id/balanceComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:selectAllOnFocus="true"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/prgIndicator"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/delete_button"
            android:text="@string/delete"
            android:textColor="@color/primaryTextColor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_button"
            android:text="@string/save"
            android:textColor="@color/primaryTextColor" />
    </LinearLayout>

</LinearLayout>