<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/rowFlatName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rowFlatAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/rowFlatFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floor_hint"
                android:textSize="12sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>