<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_flats" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/balancesFilterFlat"
                    app:singleLine="true"
                    app:singleSelection="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_balance" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/balancesFilterBalance"
                    app:singleLine="true"
                    app:singleSelection="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/incomeChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:text="@string/income" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/expensesChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:text="@string/expenses" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/balancesFilterDate"
                    app:singleSelection="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/previousMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:text="@string/previous_month" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/lastSixMonths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:text="@string/last_six_months" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnClearFilters"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_filter_off"
                    android:text="@string/clear" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSetFilters"
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_filter"
                    android:text="@string/set" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>